# hass-ai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-07-12-phase2-pattern-miner.md  2026-07-19-basement-tablet-dashboard.md  2026-07-19-cyd-bar-panel.md
docs/superpowers/specs/: 2026-07-19-basement-tablet-dashboard-design.md  2026-07-19-cyd-bar-panel-design.md
grafana/: pae-dashboard-1-ingestion.json  pae-dashboard-2-patterns.json
ha/basement_tablet/: README.md  build_dashboard.py  dashboard.json  deploy_dashboard.py  entities.py  helpers.py
ha/cyd_bar/: README.md  basement-cyd-bar.yaml
ha/lora915/: README.md  discovery.py  sensor_map.py
ha/weather/: README.md  build_dashboard.py  dashboard.json  deploy_dashboard.py  discovery.py  helpers.py  sample_payload.json  sensor_map.py
scripts/: smoke_test.py
src/pae/: cli.py  config.py  logging.py  metrics.py  smoke.py
src/pae/api/: app.py
src/pae/db/: engine.py  migrate.py  models.py
src/pae/ha/: __init__.py  client.py  errors.py  models.py
src/pae/miner/: job.py  (+6 more)
tests/: conftest.py  test_api_endpoints.py  test_attribution.py  test_basement_tablet.py  test_config.py  test_context.py  test_cyd_bar.py  test_filters.py  test_ha_client_auth.py  test_ha_client_backoff.py  test_lora915_discovery.py  test_presence.py  test_read_only_guard.py  test_registry_rows.py  test_weather_discovery.py
tests/miner/: test_pairs.py  test_pattern_model.py  test_report.py  test_scheduler.py  test_service.py  test_stats.py  test_tod.py  test_types.py
(+12 files in other folders)
