[project]
name = "pae"
version = "0.1.0"
description = "Predictive Automation Engine — observes Home Assistant, mines behavioral patterns, graduates automations through shadow/suggest/autonomous trust levels"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "structlog>=25.1",
    "prometheus-client>=0.21",
    "prometheus-fastapi-instrumentator>=7.0",
    "rq>=2.1",
    "redis>=5.2",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "holidays>=0.65",
]

[project.scripts]
pae = "pae.cli:main"

[dependency-groups]
weather = [
    "paho-mqtt>=2.1",
    "websockets>=14",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "aioresponses>=0.7",
    "ruff>=0.9",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pae"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not live'"
markers = [
    "live: tests that require a live Home Assistant instance (deselected by default)",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
# Embedded JS/CSS template strings; enforcing line length there mangles the JS.
"ha/weather/build_dashboard.py" = ["E501"]
"ha/basement_tablet/build_dashboard.py" = ["E501"]
